<resources>
  <string name="app_name">DiceGames</string>
  <string name="zero">0</string>
  <string name="coins">Coins</string>
  <string name="two_or_more">Two Or More</string>
  <string name="congrats">Congratulations!</string>
    <string name="activity_wallet_info">Click to roll the die.\n Everytime you get a six, you earn five coins.</string>
    <string name="activity_wallet_coins_amt">0</string>
  <string name="six_faced_die">Six faced die</string>
  <string name="six_faced_die_1">Six faced die 1</string>
  <string name="six_faced_die_2">Six faced die 2</string>
  <string name="six_faced_die_3">Six faced die 3</string>
  <string name="six_faced_die_4">Six faced die 4</string>
  <string name="launch_two_or_more">Two or more</string>
  <string name="stop">Stop</string>
  <string name="wager">Wager</string>
  <string name="roll">Roll</string>
  <string name="go">Go</string>
  <string name="two_alike">2 Alike</string>
  <string name="three_alike">3 alike</string>
  <string name="four_alike">4 alike</string>
  <string name="back">Back</string>
  <string name="info">Info</string>
  <string name="info_content">Dice Games Overview\nIn this game, players roll a dice with the objective of landing a 6 to earn coins.\nThese accumulated coins can be staked in the Two Or More game.\n\nWithin the Two Or More game, players have the opportunity to bet their coins and potentially win more, depending on the specific game variant they select.</string>

</resources>